<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="10dp"
    android:layout_marginTop="10dp">
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#FBFBFB"
        app:cardCornerRadius="5dp"
        app:cardElevation="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="@color/white">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">
            <androidx.cardview.widget.CardView
                android:id="@+id/cvImage"
                android:layout_width="353dp"
                android:layout_height="163dp"
                app:cardCornerRadius="5dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/imgFurniture"
                    android:layout_width="353dp"
                    android:layout_height="163dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_logo_partneroffer"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.cardview.widget.CardView>
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txt2xl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10dp"
                android:text="@string/_2xl"
                android:textColor="@color/lightBlack"
                android:textSize="30sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cvImage" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txtHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/josefinsans_regular"
                android:text="@string/home2"
                android:textColor="@color/lightBlack"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@id/txt2xl"
                app:layout_constraintStart_toStartOf="@id/txt2xl"
                app:layout_constraintTop_toBottomOf="@id/txt2xl" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txtOffer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="37dp"
                android:layout_marginEnd="4dp"
                android:fontFamily="@font/josefinsans_regular"
                android:text="@string/_35_off_across_all_uae"
                android:textColor="@color/lightBlack"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cvImage" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txtValidDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/josefinsans_regular"
                android:text="@string/valid_until_30_june"
                android:textColor="@color/lightBrown"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/txtOffer"
                app:layout_constraintTop_toBottomOf="@id/txtOffer" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>