<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_marginStart="5dp"
    android:layout_marginTop="10dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.google.android.material.card.MaterialCardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="5dp"
        android:backgroundTint="#FBFBFB"
        app:cardElevation="16dp"
        app:strokeColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.cardview.widget.CardView
                android:id="@+id/cvImage"
                android:layout_width="177dp"
                android:layout_height="125dp"
                app:cardElevation="4dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:cardCornerRadius="5dp">
                <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/imgFurniture"
                android:layout_width="177dp"
                android:layout_height="125dp"
                android:scaleType="fitXY"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:src="@drawable/img_logo_partneroffer"/>
            </androidx.cardview.widget.CardView>
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txt2xl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/cvImage"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/lightBlack"
                android:textSize="30sp"
                android:text="@string/_2xl_2"/>
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txtHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/txt2xl"
                app:layout_constraintStart_toStartOf="@id/txt2xl"
                app:layout_constraintEnd_toEndOf="@id/txt2xl"
                android:textSize="12sp"
                android:text="@string/home3"
                android:textColor="@color/lightBlack"
                android:fontFamily="@font/josefinsans_regular"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txtOffer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/josefinsans_regular"
                android:text="@string/_35_off_across_all_uae2"
                android:textColor="@color/lightBlack"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtHome" />
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txtValidDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/josefinsans_regular"
                android:text="@string/valid_until_30_june2"
                android:textColor="@color/lightBrown"
                android:textSize="12sp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/txtOffer"
                app:layout_constraintStart_toStartOf="@id/txtOffer"
                app:layout_constraintTop_toBottomOf="@id/txtOffer" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>

